[gd_scene load_steps=6 format=3 uid="uid://dq5ntdtxdyc8c"]

[ext_resource type="Script" uid="uid://bre6baeop3tqc" path="res://scenes/menus/settings_menu.gd" id="1_uuh1i"]
[ext_resource type="FontFile" uid="uid://dwise6tlxxmb" path="res://fonts/Nunito/static/Nunito-Medium.ttf" id="3_ur1dc"]
[ext_resource type="FontFile" uid="uid://wcx8hoexeh7x" path="res://fonts/Nunito/static/Nunito-Bold.ttf" id="4_grtet"]
[ext_resource type="Theme" uid="uid://ln2ffi74l3eg" path="res://resources/custom_theme.tres" id="4_ra86d"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0vk4d"]
bg_color = Color(0.592157, 0.443137, 0.286275, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="SettingsMenu" type="CanvasLayer" node_paths=PackedStringArray("display_options", "FocusButton", "master_vol_slider", "music_vol_Slider", "other_vol_slider")]
process_mode = 3
layer = 2
script = ExtResource("1_uuh1i")
display_options = NodePath("MarginContainer/MarginContainer/VBoxContainer/DisplayContainer/OptionButton")
FocusButton = NodePath("MarginContainer/MarginContainer/VBoxContainer/BackButton")
master_vol_slider = NodePath("MarginContainer/MarginContainer/VBoxContainer/MasterContainer/HBoxContainer/MasterVolSlider")
music_vol_Slider = NodePath("MarginContainer/MarginContainer/VBoxContainer/MusicContainer/HBoxContainer2/MusicVolSlider")
other_vol_slider = NodePath("MarginContainer/MarginContainer/VBoxContainer/EffectsContainer/HBoxContainer3/EffectsVolSlider")

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
theme_override_constants/margin_left = 500
theme_override_constants/margin_top = 220
theme_override_constants/margin_right = 500
theme_override_constants/margin_bottom = 220

[node name="Background" type="Panel" parent="MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0vk4d")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 75
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 75
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Settings" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_ra86d")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("4_grtet")
theme_override_font_sizes/font_size = 46
text = "Settings"
horizontal_alignment = 1

[node name="DisplayContainer" type="HBoxContainer" parent="MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="DisplayMode" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer/DisplayContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_ur1dc")
theme_override_font_sizes/font_size = 25
text = "Display Mode"
horizontal_alignment = 1

[node name="OptionButton" type="OptionButton" parent="MarginContainer/MarginContainer/VBoxContainer/DisplayContainer"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_fonts/font = ExtResource("3_ur1dc")
selected = 0
item_count = 2
popup/item_0/text = "Windowed"
popup/item_0/id = 0
popup/item_1/text = "Fullscreen"
popup/item_1/id = 1

[node name="VSeparator" type="HSeparator" parent="MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_ra86d")

[node name="MasterContainer" type="HBoxContainer" parent="MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Master" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer/MasterContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_ur1dc")
theme_override_font_sizes/font_size = 25
text = "Master Volume"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/MarginContainer/VBoxContainer/MasterContainer"]
layout_mode = 2
size_flags_horizontal = 10

[node name="MasterVolSlider" type="HSlider" parent="MarginContainer/MarginContainer/VBoxContainer/MasterContainer/HBoxContainer"]
custom_minimum_size = Vector2(400, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 1
min_value = -50.0
max_value = 2.08165e-12
value = -10.0

[node name="Max" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer/MasterContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_ur1dc")
theme_override_font_sizes/font_size = 25
text = " Higher"

[node name="MusicContainer" type="HBoxContainer" parent="MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Music" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer/MusicContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_ur1dc")
theme_override_font_sizes/font_size = 25
text = "Music Volume"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/MarginContainer/VBoxContainer/MusicContainer"]
layout_mode = 2
size_flags_horizontal = 10

[node name="MusicVolSlider" type="HSlider" parent="MarginContainer/MarginContainer/VBoxContainer/MusicContainer/HBoxContainer2"]
custom_minimum_size = Vector2(400, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 1
min_value = -50.0
max_value = 2.08165e-12
value = -10.0

[node name="Max" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer/MusicContainer/HBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_ur1dc")
theme_override_font_sizes/font_size = 25
text = " Higher"

[node name="EffectsContainer" type="HBoxContainer" parent="MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SoundEffectts" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer/EffectsContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_ur1dc")
theme_override_font_sizes/font_size = 25
text = "Sound Effects"

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/MarginContainer/VBoxContainer/EffectsContainer"]
layout_mode = 2
size_flags_horizontal = 10

[node name="EffectsVolSlider" type="HSlider" parent="MarginContainer/MarginContainer/VBoxContainer/EffectsContainer/HBoxContainer3"]
custom_minimum_size = Vector2(400, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 1
focus_neighbor_bottom = NodePath("../../../BackButton")
min_value = -50.0
max_value = 2.08165e-12
value = -10.0

[node name="Max" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer/EffectsContainer/HBoxContainer3"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_ur1dc")
theme_override_font_sizes/font_size = 25
text = " Higher"

[node name="BackButton" type="Button" parent="MarginContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(170, 80)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
focus_neighbor_top = NodePath("../EffectsContainer/HBoxContainer3/EffectsVolSlider")
theme = ExtResource("4_ra86d")
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("4_grtet")
theme_override_font_sizes/font_size = 48
text = "Back"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="item_selected" from="MarginContainer/MarginContainer/VBoxContainer/DisplayContainer/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="value_changed" from="MarginContainer/MarginContainer/VBoxContainer/MasterContainer/HBoxContainer/MasterVolSlider" to="." method="_on_master_vol_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/MarginContainer/VBoxContainer/MusicContainer/HBoxContainer2/MusicVolSlider" to="." method="_on_music_vol_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/MarginContainer/VBoxContainer/EffectsContainer/HBoxContainer3/EffectsVolSlider" to="." method="_on_other_vol_slider_value_changed"]
[connection signal="pressed" from="MarginContainer/MarginContainer/VBoxContainer/BackButton" to="." method="_on_button_pressed"]
